Refactor InviteCode class: streamline configuration loading, enhance command handling, and remove unused files